# ai-liver-yura

./: .gitignore  AGENTS.md  Pipfile  README.md  init_project.sh  pyproject.toml  requirements-dev.txt  requirements-streaming-admin.txt  requirements.txt
app/: __main__.py
config/: config.yaml  pronunciation_dictionary.yaml
docs/: ai_liver_architecture_policy.txt  ci_policy.md  conversation_quality_incremental_implementation.md  conversation_turn_handoff_design.md  emotion_reaction_architecture.md  llm_role_architecture.md  plugin_core_contract.md  source_file_plan.md  streaming_admin_console.md
scripts/: init_topic_memory_db.py  insert_sample_topic_memory.py  test_enrich_activity.py
streaming_admin/: __init__.py  __main__.py  config.py
tests/: test_action_planner.py  test_action_scheduler.py  test_activity_constraints.py  test_activity_executor_thread.py  test_activity_manager.py  test_activity_matcher_resolver.py  test_activity_planner_thread.py  test_activity_result_builder.py  test_activity_turn_result.py  test_agent_life_service.py  test_agent_memory_plugin.py  test_agent_memory_state.py  test_agent_state.py  test_agent_state_telemetry.py  test_application_event_broker.py  test_application_shutdown.py  test_architecture_boundaries.py  test_async_blocking.py  test_autonomous_activity_policy_turn_handoff.py  test_autonomous_common_pipeline.py  test_behavior_planner.py  test_capability_health.py  test_character_existence_profile.py  test_character_profile_conversation_policy.py  test_comment_moderation_usecase.py  test_comment_ranking_usecase.py  (+92 more)
(+414 files in other folders)
