[project]
name = "ai-liver"
version = "0.1.0"
description = "Activity-driven modular AI liver agent"
requires-python = ">=3.10,<3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "."
